0.8.0/_sources/dev/generated/statsmodels.base.model.LikelihoodModelResults.rst.txt
statsmodels.base.model.LikelihoodModelResults
=============================================

.. currentmodule:: statsmodels.base.model

.. autoclass:: LikelihoodModelResults

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
    
      ~LikelihoodModelResults.bse
    
    
      ~LikelihoodModelResults.conf_int
    
    
      ~LikelihoodModelResults.cov_params
    
    
      ~LikelihoodModelResults.f_test
    
    
      ~LikelihoodModelResults.initialize
    
    
      ~LikelihoodModelResults.llf
    
    
      ~LikelihoodModelResults.load
    
    
      ~LikelihoodModelResults.normalized_cov_params
    
    
      ~LikelihoodModelResults.predict
    
    
      ~LikelihoodModelResults.pvalues
    
    
      ~LikelihoodModelResults.remove_data
    
    
      ~LikelihoodModelResults.save
    
    
      ~LikelihoodModelResults.summary
    
    
      ~LikelihoodModelResults.t_test
    
    
      ~LikelihoodModelResults.tvalues
    
    
      ~LikelihoodModelResults.wald_test
    
    
      ~LikelihoodModelResults.wald_test_terms
    
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~LikelihoodModelResults.use_t
   
   