v0.14.0/_sources/dev/generated/statsmodels.base.model.LikelihoodModelResults.rst.txt
statsmodels.base.model.LikelihoodModelResults
=============================================

.. currentmodule:: statsmodels.base.model

.. autoclass:: LikelihoodModelResults
   :exclude-members: conf_int,cov_params,f_test,initialize,load,normalized_cov_params,predict,remove_data,save,summary,t_test,t_test_pairwise,wald_test,wald_test_terms,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~LikelihoodModelResults.conf_int
      ~LikelihoodModelResults.cov_params
      ~LikelihoodModelResults.f_test
      ~LikelihoodModelResults.initialize
      ~LikelihoodModelResults.load
      ~LikelihoodModelResults.normalized_cov_params
      ~LikelihoodModelResults.predict
      ~LikelihoodModelResults.remove_data
      ~LikelihoodModelResults.save
      ~LikelihoodModelResults.summary
      ~LikelihoodModelResults.t_test
      ~LikelihoodModelResults.t_test_pairwise
      ~LikelihoodModelResults.wald_test
      ~LikelihoodModelResults.wald_test_terms
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~LikelihoodModelResults.bse
      ~LikelihoodModelResults.llf
      ~LikelihoodModelResults.pvalues
      ~LikelihoodModelResults.tvalues
      ~LikelihoodModelResults.use_t
   
   
   